Correction de la version mobile Nettoyage des sections non utilisées (déplacées dans "sectionPatterns.html") Changement de la couleur de footer pour correspondre à celle du header, et remplacement de la bordure diagonale au dessus du footer par une horizontale Changement visuels sur "pourquoi AlgoETS"

--- a/source/scss/templates/_about.scss
+++ b/source/scss/templates/_about.scss
@@ -17,17 +17,22 @@
   	background-size: cover;
 }
 
-.subtitle{
-	margin: -50px 0;
-	text-align: right;
+.about {
+	.section-title {
+		display: flex;
+		align-items: center;
+		.title {
+			color: rgb(247, 87, 87);
+		}
+	}		
 }
 
 .about-content{
-	padding: 20px 0px 0px 80px;
+	// padding: 20px 0px 0px 80px;
 	h4{
 		font-weight: 600;
-
-		&:before{
+		color: rgb(247, 87, 87);
+		/* &:before{
 			position: absolute;
 			content:"\f576";
 			font-family: "Font Awesome 5 Free";
@@ -36,7 +41,7 @@
 			top: 8px;
 			left: -65px;
 			font-weight: 700;
-		}
+		} */
 	}
 
 }
